# normal-yak

./: .crates.toml  .devcontainer.json  .devenv.flake.nix  .gitignore  README.md  devenv.nix  pubspec.yaml  rust-toolchain.toml
.devcontainer/: devcontainer.json  init.sh
.devenv/: input-paths.txt  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run
.devenv/gc/: shell-10-link
.devenv/state/cargo-install/: .crates.toml
.direnv/: devenv-profile-1c8ccfda64bf1bc23693346f1d9ecfe70c470e8d.rc  devenv-profile-1cf276b7c08dabf35b0e5bafaaf9ae04f71b21a5.rc  devenv-profile-21a3db128d6ddc1c7db9ffafc1c4563b3d6dca2e.rc  devenv-profile-46068ee589296882c9a0c391f7270d253a57b652.rc  devenv-profile-572da60cfea39ea74696129ad200e41d06f279f8.rc  devenv-profile-5941ad8b382e9f1429beea6e11d1463e4d5bab50.rc  devenv-profile-6151a873150489a62b7fbbe31c09965493cda490.rc  devenv-profile-908d4ddb1beb23d62f35ada7066ca5ce54104a54.rc  devenv-profile-d0299a328132c58e2fac9950e80aaff2a8af7669.rc  devenv-profile-dbf87465b73d4cf56294d0ef8b1a186f6405af97.rc
.github/workflows/: web.yaml
android/app/: build.gradle
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: login.dart  main.dart  main.g.dart
lib/components/: futureloader.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
normal_chat/: pubspec.yaml
normal_chat/integration_test/: simple_test.dart
normal_chat/linux/: CMakeLists.txt
normal_chat/rust/: Cargo.toml
normal_chat/web/: index.html
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: matrix.rs  simple.rs  util.rs
rust/src/core/: storage.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_normal_chat.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_normal_chat.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: chromium-wrapper.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+14 files in other folders)
