[package]
name = "rust_lib_normal_yak"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
bitflags = { version = "2.6.0", features = ["std"] }
flutter_rust_bridge = "=2.7.0"
matrix-sdk = { version = "0.9.0", features = [
    "e2e-encryption",
    "native-tls",
    "automatic-room-key-forwarding",
    "js",
], default-features = false }
smallvec = "1.13.2"
thiserror = "2.0.9"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
