[package]
name = "rust_lib_normal_yak"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
actix = "0.13.5"
bitflags = { version = "2.8.0", features = ["std"] }
flutter_rust_bridge = "=2.8.0"
gluesql = { version = "0.16.3", default-features = false }
gluesql-encryption = { git = "https://github.com/thebotlynoob/gluesql-encryption", version = "0.1.0" }
gluesql_memory_storage = "0.16.3"
matrix-sdk = { version = "0.10.0", features = [
    "e2e-encryption",
    "native-tls",
    "automatic-room-key-forwarding",
    "js",
], default-features = false }
rand = { version = "0.9.0" }
rand_chacha = "0.9.0"
ring = "0.17.9"
thiserror = "2.0.11"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gluesql-idb-storage = "0.16.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gluesql_sled_storage = "0.16.3"
